force-app/main/default/objects/Course__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <inlineHelpText>Enter the duration of the course in Hours or Days</inlineHelpText>
    <label>Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>