force-app/main/default/objects/Course__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <inlineHelpText>Enter the duration of the course in Hours or Days</inlineHelpText>
    <label>Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>