force-app/main/default/objects/Course__c/validationRules/Day_or_Hour_must_be_entered.validationRule-meta.xml
<ValidationRule>
    <fullName>Day_or_Hour_must_be_entered</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL( Days__c ) &amp;&amp;  ISNULL( Hours__c )</errorConditionFormula>
    <errorDisplayField>Hours__c</errorDisplayField>
    <errorMessage>Course length in Days or Hours must be entered</errorMessage>
</ValidationRule>